--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,7 @@
   ],
   "theme_color": "#ff4d00",
   "background_color": "#ff9a00",
+  "scope": "/",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
